infrastructures/couchdb/env/k3s-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: couchdb
  labels:
    app.kubernetes.io/name: couchdb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: couchdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: couchdb
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: couchdb
          image: bitnami/couchdb:3.3.3
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - protocol: TCP
              containerPort: 7777
              name: couchdb-port
          volumeMounts:
            - name: couchdb-data
              mountPath: /bitnami/couchdb
            - name: couchdb-config
              mountPath: /opt/bitnami/couchdb/etc/
      volumes:
        - name: couchdb-data
          hostPath:
            path: /mnt/nfs/AppData/couchdb
            type: Directory
        - name: couchdb-config
          hostPath:
            path: /mnt/nfs/AppData/couchdb/etc
            type: Directory
