infrastructures/couchdb/env/k3s-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: couchdb
  labels:
    app.kubernetes.io/name: couchdb
spec:
  selector:
    app.kubernetes.io/name: couchdb
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      port: 7777
      targetPort: 7777
      name: couchdb_port
